--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 Maintainers
 -----------
-Full Name <email>
+Giuseppe La Rocca <giuseppe.larocca@egi.eu>
 
 Contributors
 ------------
-Full Name <email>
+Giuseppe La Rocca <giuseppe.larocca@egi.eu>
